fixed validation and documentation swager
