# routes/app_route.go
@@ -8,6 +8,8 @@ import (
 
 func RegisterAppRoute(router *gin.RouterGroup) {
 	router.GET("/hello", handlers.Hello())
-	router.POST("/message", handlers.Message())
+	router.GET("/hello-query", handlers.HelloQuery())
+	router.POST("/hello-form-data", handlers.HelloFormData())
+	router.POST("/hello-body", handlers.HelloBody())
 
 }
